Changes in templates e HomeController

--- a/caixa-eletronico/src/main/resources/templates/layout.html
+++ b/caixa-eletronico/src/main/resources/templates/layout.html
@@ -4,7 +4,7 @@
 	  xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 	  
 <head>
-	<title>Sistema Livraria - ABC com Spring-Boot</title>
+	<title>Caixa Eletrônico - BRASILPREV</title>
 	<meta charset="UTF-8" />
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
@@ -53,10 +53,11 @@
 		<script src="/webjars/jquery-mask-plugin/dist/jquery.mask.min.js"></script>
 		<script	src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
 		<script src="/webjars/bootstrap/js/bootstrap.min.js"></script>
-		<script type="text/javascript">
 		
+		<script type="text/javascript">
+				
 		    var url = '';
-		    
+		    		    
 		    $('button[id*="btn_"]').click(function(){
 		    	url = "http://localhost:8080/" +$(this).attr('id').split("_")[1];
 		    });
@@ -75,8 +76,7 @@
 			    })
 			});
 	
-		</script>		
-	
+		</script>			
 	
 </body>
 </html>
