--- a/caixa-eletronico/src/main/resources/templates/fragments/header.html
+++ b/caixa-eletronico/src/main/resources/templates/fragments/header.html
@@ -11,7 +11,7 @@
 					<button type="button" class="btn btn-dark navbar-toggle pull-left">
 						<i class="oi oi-menu"></i>
 					</button>
-					<a class="navbar-brand " href="#">Sistema da Livraria - ABC </a>
+					<a class="navbar-brand " href="#">Caixa Eletrônico - BRASILPREV </a>
 				</div>
 			</div>
 		</nav>
