--- a/caixa-eletronico/src/main/resources/templates/home.html
+++ b/caixa-eletronico/src/main/resources/templates/home.html
@@ -20,21 +20,12 @@
 					<div class="list-group" id="list-tab" role="tablist">
 						<a class="list-group-item list-group-item-action active"
 							id="list-spring-boot-list" data-toggle="list" href="#spring-boot"
-							role="tab" aria-controls="spring-boot">Spring-Boot</a> <a
+							role="tab" aria-controls="spring-boot">BRASILPREV</a> <a
 							class="list-group-item list-group-item-action" id="list-sts-list"
-							data-toggle="list" href="#sts" role="tab" aria-controls="sts">Spring
-							Tool Suite</a> <a class="list-group-item list-group-item-action"
+							data-toggle="list" href="#sts" role="tab" aria-controls="sts">Aposentadoria
+							</a> <a class="list-group-item list-group-item-action"
 							id="list-thymeleaf-list" data-toggle="list" href="#thymeleaf"
-							role="tab" aria-controls="thymeleaf">Thymeleaf</a> <a
-							class="list-group-item list-group-item-action"
-							id="list-webjars-list" data-toggle="list" href="#webjars"
-							role="tab" aria-controls="webjars">WebJars</a> <a
-							class="list-group-item list-group-item-action"
-							id="list-hibernate-list" data-toggle="list" href="#hibernate"
-							role="tab" aria-controls="hibernate">Hibernate</a> <a
-							class="list-group-item list-group-item-action"
-							id="list-bootstrap-list" data-toggle="list" href="#bootstrap"
-							role="tab" aria-controls="bootstrap">Bootstrap 4</a>
+							role="tab" aria-controls="thymeleaf">Tempo de Contribuição</a> 
 					</div>
 				</div>
 				<div class="col-8">
@@ -67,33 +58,8 @@
 							HTML5 JVM web development — although there is much more it can
 							do.
 						</div>
-						<div class="tab-pane fade" id="webjars" role="tabpanel"
-							aria-labelledby="list-webjars-list">
-							<a href="https://www.webjars.org/">WebJars</a> are client-side
-							web libraries (e.g. jQuery ; Bootstrap) packaged into JAR (Java
-							Archive) files.
-						</div>
-						<div class="tab-pane fade" id="hibernate" role="tabpanel"
-							aria-labelledby="list-hibernate-list">
-							<a href="http://hibernate.org/orm/">Hibernate ORM</a> enables
-							developers to more easily write applications whose data outlives
-							the application process. As an Object/Relational Mapping (ORM)
-							framework, Hibernate is concerned with data persistence as it
-							applies to relational databases (via JDBC). <br />In addition to
-							its own "native" API, Hibernate is also an implementation of the
-							Java Persistence API (JPA) specification. As such, it can be
-							easily used in any environment supporting JPA including Java SE
-							applications, Java EE application servers, Enterprise OSGi
-							containers, etc.
-						</div>
-						<div class="tab-pane fade" id="bootstrap" role="tabpanel"
-							aria-labelledby="list-bootstrap-list">
-							<a href="https://getbootstrap.com/">Bootstrap</a> is an open
-							source toolkit for developing with HTML, CSS, and JS. Quickly
-							prototype your ideas or build your entire app with our Sass
-							variables and mixins, responsive grid system, extensive prebuilt
-							components, and powerful plugins built on jQuery.
-						</div>
+												
+						
 					</div>
 				</div>
 			</div>
