--- a/ms-cx-eletronico/src/main/resources/templates/fragments/sidebar.html
+++ b/ms-cx-eletronico/src/main/resources/templates/fragments/sidebar.html
@@ -10,26 +10,15 @@
 						class="oi oi-home"></i> <span>Home</span>
 				</a></li>
 			</ul>
-
+			
 			<ul class="nav nav-pills">
-				<li class="nav-item"><span class="nav-link active" >Categorias</span></li>
-				<li class="nav-item"><a class="nav-link"
-					href="/categorias/cadastrar"> <i class="oi oi-plus"></i> <span>Cadastrar</span>
-				</a></li>
-				<li class="nav-item"><a class="nav-link"
-					href="/categorias/listar"> <i class="oi oi-spreadsheet"></i>
-						<span>Listar </span>
-				</a></li>
-			</ul>
-
-			<ul class="nav nav-pills">
-				<li class="nav-item"><span class="nav-link active" >Livros</span></li>
+				<li class="nav-item"><span class="nav-link active" >Aposentadoria</span></li>
 				<li class="nav-item"><a class="nav-link" 
-					href="/livros/cadastrar"> <i class="oi oi-plus"></i> <span>Cadastrar </span>
+					href="/aposentadorias/cadastrar"> <i class="oi oi-plus"></i> <span>Calcular Aposentadoria</span>
 				</a></li>
 				<li class="nav-item"><a class="nav-link" 
-					href="/livros/listar"> <i
-						class="oi oi-spreadsheet"></i> <span>Listar </span>
+					href="/aposentadorias/listar"> <i
+						class="oi oi-spreadsheet"></i> <span>Histórico de Cálculos </span>
 				</a></li>
 			</ul>
 
