--- a/application-web/src/main/resources/templates/clientes/cadastro.html
+++ b/application-web/src/main/resources/templates/clientes/cadastro.html
@@ -13,7 +13,7 @@
                     </li>
                 </ul>
             </div>
-            <a class="btn btn-primary btn-md" href="/livros/listar" role="button">
+            <a class="btn btn-primary btn-md" href="/clientes/lista" role="button">
                 <span class="oi oi-spreadsheet" title="Cadastro" aria-hidden="true"></span>
                 <span>Listar Clientes</span>
             </a>
