--- a/application-web/src/main/resources/templates/clientes/lista.html
+++ b/application-web/src/main/resources/templates/clientes/lista.html
@@ -30,9 +30,9 @@
                     <div class="collapse" id="collapseNome">
 
                         <nav class="navbar navbar-light bg-light">
-                            <form class="form-inline" method="GET" th:action="@{/clientes/buscar/nome}">
+                            <form class="form-inline" method="GET" th:action="@{/clientes/buscar/name}">
                                 <input class="form-control mr-sm-2" type="search" placeholder="nome" aria-label="Search"
-                                       th:name="nome" />
+                                       th:name="name" />
                                 <button class="btn btn-outline-success my-2 my-sm-0">Pesquisar</button>
                             </form>
                         </nav>
@@ -54,48 +54,26 @@
                         <th>Nome</th>
                         <th>Cpf</th>
                         <th>Data de Nasc.</th>
-                        <th>Email</th>
-                        <th>Celular</th>
-                        <th>Endereço</th>
+                        <th>Email</th>  
                         <th>Ação</th>
                     </tr>
                     </thead>
                     <tbody>
                     <tr th:each="c : ${clientes}">
                         <td th:text="${c.id}">1</td>
-                        <td th:text="${c.nome}">Jose da Silva</td>
+                        <td th:text="${c.name}">Jose da Silva</td>
                         <td th:text="${c.cpf}"> 000.000.00-00</td>
                         <td th:text="${#temporals.format(c.dataNascimento, 'dd/MM/yyyyy')}"> </td>
                         <td th:text="${c.email}"> fulano_ls@gmail.com</td>
-                        <td th:text="${c.celular}"> 9 9999-9999.</td>
-                        
-                        
-                        <td>
-                            <button type="button" class="btn btn-secondary btn-sm" data-container="body"
-                                    data-toggle="popover" data-placement="top"
-                                    th:attr="data-content=${#strings.concat(
-                                    	c.endereco.logradouro, ', ',
-                                    	c.endereco.numero, ' ',
-                                    	c.endereco.complemento, ' - ',
-                                    	c.endereco.bairro, ', ',
-                                    	c.endereco.cidade, ' - ',
-                                    	c.endereco.uf.sigla, ' - ',
-                                    	c.endereco.cep
-                                    	
-                                    )}">
-                                <span class="oi oi-eye" title="Visualizar" aria-hidden="true"></span>
-                            </button>
-                        </td>
-                        
+                                            
                         
                         <td colspan="2">
                             <a class="btn btn-info btn-sm" 
-                            		th:if="${ session.usuarioLogado.perfil == 1 }" 
                             		th:href="@{/clientes/editar/{id} (id=${c.id}) }" role="button">
                                 <span class="oi oi-brush" title="Editar" aria-hidden="true"></span>
                             </a>
-                            <button th:if="${ session.usuarioLogado.perfil == 1 }"
-                            		th:id="${#strings.concat('btn_clientes/excluir/', c.id) }" type="button" class="btn btn-danger btn-sm"
+                            <button class="btn btn-danger btn-sm"
+                            		th:id="${#strings.concat('btn_clientes/excluir/', c.id) }" type="button" 
                                     data-toggle="modal" data-target="#myModal">
                                 <span class="oi oi-circle-x" title="Excluir" aria-hidden="true"></span>
                             </button>
