--- a/application-web/src/main/resources/templates/fragments/sidebar.html
+++ b/application-web/src/main/resources/templates/fragments/sidebar.html
@@ -14,20 +14,20 @@
 			<ul class="nav nav-pills">
 				<li class="nav-item"><span class="nav-link active">Clientes</span></li>
 				<li class="nav-item"><a class="nav-link" 
-					href="/clientes/cadastro"> <i class="oi oi-plus"></i> <span>Cadastrar </span>
+				 th:href="@{/clientes/cadastro}"> <i class="oi oi-plus"></i> <span>Cadastrar </span>
 				</a></li>
 				<li class="nav-item"><a class="nav-link" 
-					href="/clientes/listar"> <i class="oi oi-spreadsheet"></i> <span>Listar </span>
+					th:href="@{/clientes/lista}"> <i class="oi oi-spreadsheet"></i> <span>Listar </span>
 				</a></li>
 			</ul>
 			
 			<ul class="nav nav-pills">
 				<li class="nav-item"><span class="nav-link active" >Aposentadoria</span></li>
 				<li class="nav-item"><a class="nav-link" 
-					href="/aposentadorias/cadastrar"> <i class="oi oi-plus"></i> <span>Calcular Aposentadoria</span>
+					  th:href="@{/aposentadorias/cadastrar}"> <i class="oi oi-plus"></i> <span>Calcular Aposentadoria</span>
 				</a></li>
 				<li class="nav-item"><a class="nav-link" 
-					href="/aposentadorias/listar"> <i
+						th:href="@{/aposentadorias/listar}"> <i
 						class="oi oi-spreadsheet"></i> <span>Histórico de Cálculos </span>
 				</a></li>
 			</ul>
