Modified AposentadoriaController and templates

--- a/application-web/src/main/resources/templates/aposentadorias/lista.html
+++ b/application-web/src/main/resources/templates/aposentadorias/lista.html
@@ -26,10 +26,10 @@
                     <thead>
                     <tr>
                         <th>#</th>
-                        <th>ISBN</th>
-                        <th>Livro</th>
-                        <th>Autor</th>
-                        <th>Categoria</th>
+                        <th>ID</th>
+                        <th>Cliente</th>
+                        <th>Valor Total</th>
+                        <th>Quantidade de Anos</th>
                         <th>Data de Entrada</th>
                         <th>Ação</th>
                     </tr>
