--- a/application-web/src/main/resources/templates/fragments/sidebar.html
+++ b/application-web/src/main/resources/templates/fragments/sidebar.html
@@ -24,10 +24,10 @@
 			<ul class="nav nav-pills">
 				<li class="nav-item"><span class="nav-link active" >Aposentadoria</span></li>
 				<li class="nav-item"><a class="nav-link" 
-					  th:href="@{/aposentadorias/cadastrar}"> <i class="oi oi-plus"></i> <span>Calcular Aposentadoria</span>
+					  th:href="@{/aposentadorias/cadastro}"> <i class="oi oi-plus"></i> <span>Calcular Aposentadoria</span>
 				</a></li>
 				<li class="nav-item"><a class="nav-link" 
-						th:href="@{/aposentadorias/listar}"> <i
+						th:href="@{/aposentadorias/lista}"> <i
 						class="oi oi-spreadsheet"></i> <span>Histórico de Cálculos </span>
 				</a></li>
 			</ul>
