--- a/application-web/src/main/resources/templates/clientes/cadastro.html
+++ b/application-web/src/main/resources/templates/clientes/cadastro.html
@@ -13,7 +13,7 @@
                     </li>
                 </ul>
             </div>
-            <a class="btn btn-primary btn-md" href="/clientes/lista" role="button">
+            <a class="btn btn-primary btn-md" th:href="@{/clientes/lista}" role="button">
                 <span class="oi oi-spreadsheet" title="Cadastro" aria-hidden="true"></span>
                 <span>Listar Clientes</span>
             </a>
@@ -22,8 +22,10 @@
         <div class="container" id="cadastro">
             
             <div th:replace="fragments/alert"></div>
-                        
-           <form th:action="@{/clientes/salvar}" th:object="${cliente}" method="POST">
+            
+           <form th:action="${cliente.id == null } ? @{clientes/salvar} : @{clientes/editar}"              
+            		th:object="${cliente}" method="POST">
+            		
                <div class="form-row">
                    <div class="form-group col-md-6">
                        <label for="name">Nome do Cliente</label>
